--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,8 +1,8 @@
 {% if player.episode %}
-<div class="container">
+<div class="container px-0">
   <div class="col-12 col-md-4 ml-auto">
     <div class="color-4-trans" id="player-wrapper">
-      <a class="showpod" id="player-image" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
+      <a class="showpod" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
         <img class="img-fluid" src="//images.weserv.nl/?url={{ player.episode.podcast.artworkUrl }}360x360bb.jpg&w=100&h=100&t=absolute" />
       </a>
       <div id="player-buttons">
@@ -36,6 +36,9 @@
 </div>
 {% elif cookies %}
 <div class="col-12 color-4-trans" id="cookie-banner">
-  <h1>COOKIES!</h1>
+  <h1>This site uses cookies</h1>
+  <button class="btn-dope" onclick="cookieBannerClose()" id="cookie-banner-close">
+    <i class="fas fa-times-circle icon"></i>
+  </button>
 </div>
 {% endif %}
