--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -1,7 +1,7 @@
 {% extends results.extend|yesno:'base.html,ajax.html' %}
 
 {% block title %}
-Listen to episodes of {{ podcast.title }} on dopepod
+dopepod
 {% endblock %}
 
 {% block center-stage %}
