--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -3,7 +3,7 @@
   <div class="col-12 col-md-4 ml-auto">
     <div class="color-4-trans" id="player-wrapper">
       <a class="showpod" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
-        <img class="img-fluid" src="//images.weserv.nl/?url={{ player.episode.podcast.artworkUrl }}360x360bb.jpg&w=100&h=100&t=absolute" />
+        <img class="img-fluid" src="{{ player.episode.podcast.artworkUrl }}360x360bb.jpg" />
       </a>
       <div id="player-buttons">
         <a class="btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
