--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -7,7 +7,7 @@
             <span class="charts-rank">
               {{ podcast.position }}
             </span>
-            <img class="img-fluid" src="{{ podcast.artworkUrl }}360x360bb.jpg" />
+            <img class="img-fluid" src="/img/&url={{ podcast.artworkUrl }}360x360bb.jpg" />
             <h1>
               {{ podcast.title }}
             </h1>
