--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -7,7 +7,7 @@
           {{ episode.length }}
         </span>
       {% endif %}
-      <img class="img-fluid" src="{{ episode.podcast.artworkUrl }}360x360bb.jpg" />
+      <img class="img-fluid" src="//img.dopepod.me/{{ podcast.artworkUrl }}100x100bb.jpg" />
     </a>
     <a class="showpod" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
       <h1>
