--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -7,7 +7,7 @@
             <span class="charts-rank">
               {{ podcast.position }}
             </span>
-            <img class="img-fluid" src="//img.dopepod.me/{{ podcast.artworkUrl }}100x100bb.jpg" />
+            <img class="img-fluid" src="http://img.dopepod.me/{{ podcast.artworkUrl }}100x100bb.jpg" />
             <h1>
               {{ podcast.title }}
             </h1>
