--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -4,7 +4,7 @@
       {% with subscription.podcast as podcast %}
         <div class="col-12 col-md-4 subscriptions-box">
           <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
-            <img class="img-fluid" src="http://img.dopepod.me/{{ podcast.artworkUrl }}100x100bb.jpg" />
+            <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg" />
           </a>
           <a class="showpod color-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
             <h1 class="result-title">
