--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -17,7 +17,7 @@
             </p>
             <ul>
               <li>
-                {{ podcast.n_subscribers }} subscriber{{ podcast.n_subscribers|pluralize }}
+                {{ podcast.genre }}
               </li>
               <li>
                 {{ podcast.language }}
